# Py

./: .gitignore  4  master_requirements.txt  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: sdlc_s5_cicd.yaml  week 9 eow ci-cd.yaml
Courses & Learnings/: requirements.txt
Courses & Learnings/Learnings/docs/: readme!.MD
Courses & Learnings/Learnings/langgraph/: langgraph_evaluation_optimizer.py  langgraph_ochestrator_worker.py  langgraph_prompt_chaining.py  langgraph_routing.py  sb.py
Courses & Learnings/Learnings/web_sockets/: client.py  server.py
Courses & Learnings/Projects/P1 lang_chain_graph_mini_project/: README.md
Courses & Learnings/Projects/prompt engi. + pydantic/: req.txt
Week 1/Day 1/: main.py  weather api.py  weather_api.py
Week 1/Day 2/: list_and_tuple_methods.py  list_operations.py
Week 1/Day 3/: control_flow_and_loops.py  csv_intro.py  dict_and_set.py  sb.py  student_data.csv
Week 1/Day 3/expense tracker/: csv_utility.py  helpers.py  (+3 more)
Week 1/Day 4/: exception_handling.py  file_manipulation.py  functions_scope_args_kwargs.py  new_test.txt  new_test2.txt  new_test4.txt  new_test5.txt  test.txt
Week 1/Day 5/: pydantic_intro.py  req.txt
Week 1/Day 6/: log.py  low_stock_report.txt  main.py  model.py  sb.py
Week 2/: sb.py
Week 2/Day 1/: main.py  product.py
Week 2/Day 2/: encapsulation.py  polymorphism.py
Week 2/Day 3/: cls_and_static_method.py
Week 2/Day 4/: iterators_and_generators.py  list_and_dict_comprehension.py
Week 2/Day 5/: factory_pattern.py  singleton.py
Week 2/Day 6/: low_stock_report.txt  main.py  model.py  test.py  utility.py
Week 2/w2env/: pyvenv.cfg
Week 3/Day 1/: main.py  test.py
Week 3/Day 2/: test.py
Week 3/Day 3/: test.py
Week 4 & 5/SDLC/: .pre-commit.yaml  CHANGELOG.MD  Dockerfile  docker-compose.yaml  requirements.txt
Week 4 & 5/W5 Day 5/: decorator_pattern.py  docs.md
Week 4/Day 1/: app.py
Week 4/EOW project/: README.MD
Week 6 & 7 & 8/W8 Day 1/: langchain.db  main.py
Week 6 & 7 & 8/W8 Day 2/: main.py
Week 6 & 7 & 8/docs/: README.MD
Week 6 & 7/W6 Day 123/: docs.md  main.py
Week 6 & 7/W7 Day 3/: main.py
Week 6 & 7/docs/: README.MD
Week 6 - 9/: requirements.txt
Week 6 - 9/EOW project/: .gitignore  Dockerfile  README.md  lambda_handler.py  main.py  mangum_handler.py  requirements.txt  template.yaml
Week 6 - 9/SAM_PROJECT_ONE/: requirements.txt  template.yaml
Week 6 - 9/SAM_PROJECT_TWO_WORKS!/: .gitignore  requirements.txt  template.yaml
Week 6 - 9/W8 Day 1/: langchain.db
Week 6 - 9/W9 Day 1 & 2/: app.py  compose.yaml  template.yaml
Week 6 - 9/docs/: AWS_README.MD  DOCKER_README.MD  PROCESS.MD  README.MD
Week 6/Day 123/: constants.py  evaluation.py  main.py  prompt.py  qa_dataset.json  utility.py
Week 6/Day 6/: constants.py  main.py
Week 6/docs/: README.MD
Week N/PDF Loaders/: .gitignore  main.py  page_2_gpt4_vision_ocr.md  page_6_gpt4_vision_ocr.md
courses/prompt engi. + pydantic/: req.txt
(+496 files in other folders)
