[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "anthropic==0.73.0",
    "bs4>=0.0.2",
    "chromadb==1.3.5",
    "fastapi==0.124.2",
    "fastmcp==2.13.1",
    "google-genai==1.50.1",
    "groq==0.34.1",
    "lancedb==0.25.3",
    "langchain==1.1.3",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "logfire==4.14.2",
    "openai==2.9.0",
    "pre-commit==4.5.0",
    "psycopg==3.3.2",
    "pymupdf>=1.26.7",
    "pytest==9.0.1",
    "streamlit==1.51.0",
]
